--- a/DSM.Controller.csproj
+++ b/DSM.Controller.csproj
@@ -16,7 +16,7 @@
     <RepositoryType>Library</RepositoryType>
     <PackageTags>Open APMM, Service Monitoring , Performance Monitoring</PackageTags>
     <NeutralLanguage>en-US</NeutralLanguage>
-    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
@@ -37,7 +37,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="LICENSE.txt">
+    <None Include="LICENSE">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
